--- a/login/templates/all_task.html
+++ b/login/templates/all_task.html
@@ -90,7 +90,7 @@
                                     <li><!-- start message -->
                                         <a href="#">
                                             <div class="pull-left">
-                                                <img src="{{ static('img/26115.jpg') }}" class="img-circle"
+                                                <img src="{{ static('img/message.jpg') }}" class="img-circle"
                                                      alt="User Image"/>
                                             </div>
                                             <h4>
@@ -103,7 +103,7 @@
                                     <li>
                                         <a href="#">
                                             <div class="pull-left">
-                                                <img src="{{ static('img/26115.jpg') }}" class="img-circle"
+                                                <img src="{{ static('img/message.jpg') }}" class="img-circle"
                                                      alt="user image"/>
                                             </div>
                                             <h4>
@@ -116,7 +116,7 @@
                                     <li>
                                         <a href="#">
                                             <div class="pull-left">
-                                                <img src="{{ static('img/avatar.png') }}" class="img-circle"
+                                                <img src="{{ static('img/message.jpg') }}" class="img-circle"
                                                      alt="user image"/>
                                             </div>
                                             <h4>
@@ -129,7 +129,7 @@
                                     <li>
                                         <a href="#">
                                             <div class="pull-left">
-                                                <img src="{{ static('img/26115.jpg') }}" class="img-circle"
+                                                <img src="{{ static('img/message.jpg') }}" class="img-circle"
                                                      alt="user image"/>
                                             </div>
                                             <h4>
@@ -142,7 +142,7 @@
                                     <li>
                                         <a href="#">
                                             <div class="pull-left">
-                                                <img src="{{ static('img/avatar.png') }}" class="img-circle"
+                                                <img src="{{ static('img/message.jpg') }}" class="img-circle"
                                                      alt="user image"/>
                                             </div>
                                             <h4>
