--- a/qmuidemo/src/main/res/layout/activity_reset_password.xml
+++ b/qmuidemo/src/main/res/layout/activity_reset_password.xml
@@ -33,7 +33,7 @@
                 android:paddingLeft="?attr/qmui_content_padding_horizontal"
                 android:paddingRight="?attr/qmui_content_padding_horizontal"
                 android:paddingTop="@dimen/qmui_group_list_section_header_footer_padding_vertical"
-                android:text="账号信息"
+                android:text="重置密码"
                 android:textColor="?attr/qmui_config_color_gray_3"
                 android:textSize="@dimen/qmui_group_list_section_header_footer_text_size" />
             <!--边框分割细线-->
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@drawable/qmui_s_list_item_bg_with_border_bottom" />
-            <!--账户、手机号、密码输入框-->
+            <!--密码输入框-->
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -49,30 +49,6 @@
                 android:columnCount="2"
                 android:focusable="true"
                 android:focusableInTouchMode="true">
-                <!--账号-->
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/qmui_list_item_height"
-                    android:layout_gravity="fill_horizontal"
-                    android:background="@drawable/qmui_s_list_item_bg_with_border_bottom"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/common_content_spacing"
-                    android:paddingRight="@dimen/common_content_spacing"
-                    android:text="账号"
-                    android:textColor="?attr/qmui_config_color_gray_1"
-                    android:textSize="?attr/qmui_common_list_item_title_h_text_size" />
-                <!--账号输入框-->
-                <EditText
-                    android:id="@+id/email"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="fill"
-                    android:background="@drawable/qmui_divider_bottom_bitmap"
-                    android:hint="请输入2到20位字符"
-                    android:maxLength="50"
-                    android:textColor="?attr/qmui_config_color_gray_5"
-                    android:textSize="?attr/qmui_common_list_item_detail_h_text_size" />
-
                 <!--密码-->
                 <TextView
                     android:layout_width="wrap_content"
@@ -97,28 +73,55 @@
                     android:inputType="textPassword"
                     android:textColor="?attr/qmui_config_color_gray_5"
                     android:textSize="?attr/qmui_common_list_item_detail_h_text_size" />
+                <!--确认密码-->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/qmui_list_item_height"
+                    android:layout_gravity="fill_horizontal"
+                    android:background="@drawable/qmui_s_list_item_bg_with_border_bottom"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/common_content_spacing"
+                    android:paddingRight="@dimen/common_content_spacing"
+                    android:text="确认密码"
+                    android:textColor="?attr/qmui_config_color_gray_1"
+                    android:textSize="?attr/qmui_common_list_item_title_h_text_size" />
+                <!--确认密码输入框-->
+                <EditText
+                    android:id="@+id/confirm_password"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="fill"
+                    android:background="@drawable/qmui_divider_bottom_bitmap"
+                    android:hint="请输入6到20位密码"
+                    android:maxLength="20"
+                    android:inputType="textPassword"
+                    android:textColor="?attr/qmui_config_color_gray_5"
+                    android:textSize="?attr/qmui_common_list_item_detail_h_text_size" />
+
+
             </GridLayout>
-            <!--登录按钮位置-->
+            <!--重置密码按钮位置-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/qmui_config_color_white"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:padding="@dimen/common_content_spacing">
 
                 <Space
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
+
                 <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
-                    android:id="@+id/sign_in_button"
+                    android:id="@+id/reset_password_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:clickable="true"
                     android:gravity="center"
                     android:padding="10dp"
-                    android:text="登录"
+                    android:text="重置密码"
                     android:textSize="?attr/qmui_common_list_item_title_h_text_size"
                     app:qmui_isRadiusAdjustBounds="true" />
 
@@ -126,62 +129,8 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/qmui_config_color_white"
-                android:orientation="horizontal"
-                android:padding="10dp">
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-                <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
-                    android:id="@+id/sign_up_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:clickable="true"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:text="注册"
-                    android:textSize="?attr/qmui_common_list_item_title_h_text_size"
-                    app:qmui_isRadiusAdjustBounds="true" />
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/qmui_config_color_white"
-                android:orientation="horizontal"
-                android:padding="10dp">
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-                <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
-                    android:id="@+id/recover_password_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:clickable="true"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:text="找回密码"
-                    android:textSize="?attr/qmui_common_list_item_title_h_text_size"
-                    app:qmui_isRadiusAdjustBounds="true" />
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-            </LinearLayout>
-
         </LinearLayout>
 
     </ScrollView>
