--- a/qmuidemo/src/main/res/layout/activity_signup.xml
+++ b/qmuidemo/src/main/res/layout/activity_signup.xml
@@ -49,7 +49,7 @@
                 android:columnCount="2"
                 android:focusable="true"
                 android:focusableInTouchMode="true">
-                <!--账号-->
+                <!--用户名-->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/qmui_list_item_height"
@@ -58,18 +58,42 @@
                     android:gravity="center_vertical"
                     android:paddingLeft="@dimen/common_content_spacing"
                     android:paddingRight="@dimen/common_content_spacing"
-                    android:text="账号"
+                    android:text="用户名"
                     android:textColor="?attr/qmui_config_color_gray_1"
                     android:textSize="?attr/qmui_common_list_item_title_h_text_size" />
-                <!--账号输入框-->
+                <!--用户名输入框-->
+                <EditText
+                    android:id="@+id/username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="fill"
+                    android:background="@drawable/qmui_divider_bottom_bitmap"
+                    android:hint="请输入用户名"
+                    android:maxLength="20"
+                    android:textColor="?attr/qmui_config_color_gray_5"
+                    android:textSize="?attr/qmui_common_list_item_detail_h_text_size" />
+
+                <!--邮箱-->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/qmui_list_item_height"
+                    android:layout_gravity="fill_horizontal"
+                    android:background="@drawable/qmui_s_list_item_bg_with_border_bottom"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/common_content_spacing"
+                    android:paddingRight="@dimen/common_content_spacing"
+                    android:text="邮箱"
+                    android:textColor="?attr/qmui_config_color_gray_1"
+                    android:textSize="?attr/qmui_common_list_item_title_h_text_size" />
+                <!--邮箱输入框-->
                 <EditText
                     android:id="@+id/email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="fill"
                     android:background="@drawable/qmui_divider_bottom_bitmap"
-                    android:hint="请输入2到20位字符"
-                    android:maxLength="50"
+                    android:hint="请输入邮箱"
+                    android:maxLength="20"
                     android:textColor="?attr/qmui_config_color_gray_5"
                     android:textSize="?attr/qmui_common_list_item_detail_h_text_size" />
 
@@ -97,47 +121,46 @@
                     android:inputType="textPassword"
                     android:textColor="?attr/qmui_config_color_gray_5"
                     android:textSize="?attr/qmui_common_list_item_detail_h_text_size" />
-            </GridLayout>
-            <!--登录按钮位置-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/qmui_config_color_white"
-                android:orientation="horizontal"
-                android:padding="10dp">
-
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-                <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
-                    android:id="@+id/sign_in_button"
+                <!--确认密码-->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/qmui_list_item_height"
+                    android:layout_gravity="fill_horizontal"
+                    android:background="@drawable/qmui_s_list_item_bg_with_border_bottom"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/common_content_spacing"
+                    android:paddingRight="@dimen/common_content_spacing"
+                    android:text="确认密码"
+                    android:textColor="?attr/qmui_config_color_gray_1"
+                    android:textSize="?attr/qmui_common_list_item_title_h_text_size" />
+                <!--确认密码输入框-->
+                <EditText
+                    android:id="@+id/confirm_password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:clickable="true"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:text="登录"
-                    android:textSize="?attr/qmui_common_list_item_title_h_text_size"
-                    app:qmui_isRadiusAdjustBounds="true" />
+                    android:layout_gravity="fill"
+                    android:background="@drawable/qmui_divider_bottom_bitmap"
+                    android:hint="请输入6到20位密码"
+                    android:maxLength="20"
+                    android:inputType="textPassword"
+                    android:textColor="?attr/qmui_config_color_gray_5"
+                    android:textSize="?attr/qmui_common_list_item_detail_h_text_size" />
 
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-            </LinearLayout>
 
+            </GridLayout>
+            <!--注册按钮位置-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/qmui_config_color_white"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:padding="@dimen/common_content_spacing">
+
                 <Space
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
+
                 <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                     android:id="@+id/sign_up_button"
                     android:layout_width="wrap_content"
@@ -149,39 +172,13 @@
                     android:text="注册"
                     android:textSize="?attr/qmui_common_list_item_title_h_text_size"
                     app:qmui_isRadiusAdjustBounds="true" />
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/qmui_config_color_white"
-                android:orientation="horizontal"
-                android:padding="10dp">
                 <Space
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
-                <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
-                    android:id="@+id/recover_password_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:clickable="true"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:text="找回密码"
-                    android:textSize="?attr/qmui_common_list_item_title_h_text_size"
-                    app:qmui_isRadiusAdjustBounds="true" />
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-            </LinearLayout>
 
+            </LinearLayout>
         </LinearLayout>
 
     </ScrollView>
