--- a/qmuidemo/src/main/res/layout/fragment_tab_viewpager_layout.xml
+++ b/qmuidemo/src/main/res/layout/fragment_tab_viewpager_layout.xml
@@ -16,9 +16,9 @@
 -->
 
 <com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                android:layout_width="match_parent"
-                                                android:layout_height="match_parent">
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -26,6 +26,7 @@
         android:fitsSystemWindows="true"
         android:orientation="vertical"
         android:background="@color/qmui_config_color_white">
+
 
         <com.qmuiteam.qmui.widget.tab.QMUITabSegment
             android:id="@+id/tabSegment"
@@ -38,14 +39,40 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:fitsSystemWindows="true"/>
-    </LinearLayout>
+            android:fitsSystemWindows="true">
+        </androidx.viewpager.widget.ViewPager>
+        <TextView
+            android:id="@+id/pass_divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/bar_divider"
+            android:visibility="gone"/>
+        <FrameLayout
+            android:id="@+id/pass_frame"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="100dp"
+            android:visibility="gone">
+                <org.angmarch.views.NiceSpinner
+                    android:id="@+id/nice_spinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"/>
+            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+                android:id="@+id/threshold_pass_button"
+                android:layout_width="wrap_content"
+                android:layout_gravity="right"
+                android:layout_height="40dp"
+                app:qmui_radius="6dp"
+                android:text="  通过高于该阈值的答案  "/>
+        </FrameLayout>
 
-
+</LinearLayout>
     <com.qmuiteam.qmui.widget.QMUITopBarLayout
         android:id="@+id/topbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"/>
-
 </com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>
