--- a/qmuidemo/src/main/res/layout/my_task_layout.xml
+++ b/qmuidemo/src/main/res/layout/my_task_layout.xml
@@ -25,11 +25,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="40dp">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="?attr/qmui_topbar_height"
+            android:fillViewport="true"
+            android:fitsSystemWindows="true">
         <com.qmuiteam.qmui.widget.grouplist.QMUIGroupListView
             android:id="@+id/my_task_groupListView"
             android:paddingTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+        </ScrollView>
     </com.qmuiteam.qmui.widget.pullRefreshLayout.QMUIPullRefreshLayout>
 
     <com.qmuiteam.qmui.widget.QMUITopBarLayout
