--- a/login/templates/chat.html
+++ b/login/templates/chat.html
@@ -107,6 +107,7 @@
         }, 1200);
     };
 
+    alert("test");
     //websocket移植
     var roomName = {{ room_name }};
     var userName = {{ user_name }}
